--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="dp_300">300dp</dimen>
     <dimen name="dp_100">100dp</dimen>
     <dimen name="dp_50">50dp</dimen>
+    <dimen name="dp_150">150dp</dimen>
+    <dimen name="sp_50">50sp</dimen>
 </resources>
