--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,18 +31,37 @@
             android:textSize="@dimen/sp_40"
             />
 
-        <EditText
-            android:layout_width="@dimen/dp_300"
-            android:layout_height="@dimen/dp_100"
-            android:hint="@string/text_username_hint"
-            android:text="@={viewModel.email}"/>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:paddingLeft="@dimen/dp_50"
+            android:paddingRight="@dimen/dp_50">
 
-        <EditText
-            android:layout_width="@dimen/dp_300"
-            android:layout_height="@dimen/dp_100"
-            android:hint="@string/text_password_hint"
-            android:inputType="textPassword"
-            android:text="@={viewModel.password}"/>
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/text_username_hint"
+                android:text="@={viewModel.email}"
+                />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:paddingLeft="@dimen/dp_50"
+            android:paddingRight="@dimen/dp_50">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/text_password_hint"
+                android:inputType="textPassword"
+                android:text="@={viewModel.password}"/>
+        </android.support.design.widget.TextInputLayout>
 
         <Button
             android:layout_width="@dimen/dp_100"
