--- a/app/src/main/res/layout/fragment_table_customer.xml
+++ b/app/src/main/res/layout/fragment_table_customer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     >
 
@@ -14,10 +14,12 @@
 
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/white"
+        bind:drawTables="@{viewModel.tables}"
+        bind:setViewModel="@{viewModel}"
         tools:context="com.framgia.awesomecity.screen.screen.table.TableActivity"
-        >
-    </android.support.constraint.ConstraintLayout>
+        />
 </layout>
