create orders list fragment

--- a/app/src/main/res/layout/activity_main_customer.xml
+++ b/app/src/main/res/layout/activity_main_customer.xml
@@ -61,6 +61,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             app:drawerLayout="@{drawerLayout}"
+            app:viewModel="@{viewModel}"
             app:menu="@menu/menu_navigation">
 
         </android.support.design.widget.NavigationView>
